remove featured_order and is_most_searched
