# app/Http/Resources/CategoryResource.php
@@ -16,8 +16,6 @@ use OpenApi\Attributes as OA;
         new OA\Property(property: "slug", type: "string"),
         new OA\Property(property: "is_active", type: "boolean"),
         new OA\Property(property: "featured_order", type: "integer"),
-        new OA\Property(property: "is_most_searched", type: "boolean"),
-        new OA\Property(property: "most_searched_order", type: "integer"),
         new OA\Property(property: "created_at", type: "string", format: "date-time"),
         new OA\Property(property: "updated_at", type: "string", format: "date-time"),
     ]
@@ -37,8 +35,6 @@ class CategoryResource extends JsonResource
             'slug' => $this->slug,
             'is_active' => $this->is_active,
             'featured_order' => $this->featured_order,
-            'is_most_searched' => $this->is_most_searched,
-            'most_searched_order' => $this->most_searched_order,
             'created_at' => $this->created_at,
             'updated_at' => $this->updated_at,
         ];
